<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HasilActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="PETUNJUK"
        app:titleTextColor="@color/white"></android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/red_400"
        android:padding="@dimen/spacing_large">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/one"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:textColor="@color/white"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/two"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_2" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/three"
                android:paddingRight="5dp"/>

            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/four"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/five"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/six"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_6" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/seven"
                android:paddingRight="5dp"/>
            <android.support.v7.widget.AppCompatEditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/txt_area"
                android:enabled="false"
                android:focusableInTouchMode="false"
                android:padding="@dimen/spacing_large"
                android:text="@string/text_7" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>